glFusion ChangeLog

v1.3.0 (Trunk Development Branch)
------
- Remove deprecated microsummary feature (Mark H.)
- StaticPages: Display 404 page if user does not have permission to view
  static page (Mark)
- Allow [img] code in [url][/url] set (Mark)
- Improved permission check on story edit - only show when appropriate (Mark)
- Forum: Current forum was not available as a select option when spliting a
  topic (Mark)
- FileMgmt: If no category is selected, display error and abort upload (Mark)
- Improved UTF-8 handling - works whether mbtye extension is installed
  in PHP or not (Mark)
- Improved user menu caching - ensure no user specific data is cached (Mark)
- Media Gallery: include thumbnail image in album RSS feeds (Mark)
- Replaced RSS code with SimplePie and feedcreator.class.php (Mark)
- Saving a story with invalid data returned to story list instead of the
  story editor with the appropriate error message (Mark)
- No news message did not always display when it should (Mark)
- If user changes remember me settings, ensure they are implemented
  immediately (Mark)
- Implemented re-validation when security token has expired (Mark)
- New SESS API - SESS_unSet() removes a session variable is set (Mark)
- CAPTCHA now displays appropriate feedback when invalid CAPTCHA entered
  on comment entry form (Mark)
- Cache $_GROUP data in session variable to reduce SQL calls (Mark)
- E_ALL fix when saving comments (Mark)
- Improved COM_refresh() to use header() call when appropriate (Mark)
- Support for MySQLi interface (Mark)
- Implement new What's New options - no longer display an item
  if not new items are available.  New config option to hide
  What's New block if no entries to display (Mark/Lee)
- Initialize $_USER for all users (including anonymous) (Mark)
- Modified to now check $_USER for user preferences (Mark)
- Fixed race condition when creating menu cache files (menu/css/js) (Mark)
- Updated phpmailer to latest release (Mark)