@@ -239,6 +239,7 @@ $LANG01 = array(
     'unsubscribe'               => 'Unsubscribe',
     'view_online'               => 'Click here %s to view online',
     'no_new_items'              => 'No New Items',
+    'max_execution_time'        => 'glFusion recommends the PHP default value of 30 seconds as a minimum, but plugin uploads and other operations may take longer than this depending upon your hosting environment.  If safe_mode (above) is Off, you may be able to increase this by modifying the value of <b>max_execution_time</b> in your php.ini file.',
 );
 
 ###############################################################################
